better dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,17 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/alpine
+// README at: https://github.com/devcontainers/templates/tree/main/src/javascript-node
 {
-	"name": "Alpine",
+	"name": "Node.js",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/base:alpine-3.20",
-	"features": {
-		"ghcr.io/devcontainers/features/node:1": {
-			"version": "18",
-			"pnpmVersion": "8.8.0",
-			"nvmVersion": "0.39"
-		}
-	},
+	"image": "mcr.microsoft.com/devcontainers/javascript-node:1-22-bookworm",
 	"customizations": {
 		"vscode": {
 			"extensions": [
+				"esbenp.prettier-vscode",
 				"dbaeumer.vscode-eslint",
 				"VisualStudioExptTeam.vscodeintellicode",
 				"VisualStudioExptTeam.intellicode-api-usage-examples",
-				"VisualStudioExptTeam.vscodeintellicode-completions",
-				"esbenp.prettier-vscode"
+				"VisualStudioExptTeam.vscodeintellicode-completions"
 			]
 		}
 	}
@@ -30,7 +23,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "uname -a",
+	// "postCreateCommand": "yarn install",
 
 	// Configure tool-specific properties.
 	// "customizations": {},
