--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "npm run eslint && npm run build && node ./dist/eval-sandbox-tests.js",
+    "dev": "npm run eslint && npm run build && http-server public",
     "build": "tsc",
     "eslint": "npx eslint src"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.2"
+    "typescript-eslint": "^8.18.2",
+    "http-server": "^14.1.1"
   }
 }
